doc(openapi): create and use GenericResponse for restart and ident
